--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouncing Number</title>
-    <link rel="stylesheet" href="E:\VSCode\bouncing_num\stylesheet.css">
+    <link rel="stylesheet" href="assets\stylesheet.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <p>M Akbar Ababil - Progate's student</p>
         </div>
     </div>
-    <script src="E:\VSCode\bouncing_num\java.js"></script>
+    <script src="assets\java.js"></script>
 </body>
 
 </html>
